<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonInsertarInsumo"
        android:layout_width="@dimen/width"
        android:background="@drawable/primary_round"
        android:layout_height="wrap_content"
        android:textColor="@color/colorW"
        android:layout_gravity="center_horizontal"
        android:text="@string/Insumo" />

    <Button

        android:id="@+id/buttonInsertarPlato"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_round"
        android:textColor="@color/colorW"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_gravity="center_horizontal"
        android:text="@string/plato" />

    <Button
        android:id="@+id/buttonInsertarOrden"
        android:layout_width="@dimen/width"
        android:background="@drawable/primary_round"
        android:textColor="@color/colorW"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_gravity="center_horizontal"
        android:text="@string/orden" />

    <Button
        android:id="@+id/buttonImprimirOrden"
        android:layout_width="@dimen/width"
        android:background="@drawable/primary_round"
        android:textColor="@color/colorW"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_gravity="center_horizontal"
        android:text="@string/imprimir" />

</LinearLayout>
